--- a/coffee-shop-website-main/index.html
+++ b/coffee-shop-website-main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coffee shop</title>
+    <title>coffee shop webapp</title>
     <link rel="icon" href="./favicon_io/favicon.ico" sizes="any"><!-- 32×32 -->
     <link rel="icon" href="./favicon_io/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./favicon_io/apple-touch-icon.png"><!-- 180×180 -->
