--- a/coffee-shop-website-main/index.html
+++ b/coffee-shop-website-main/index.html
@@ -381,7 +381,7 @@
             <a href="#blogs">blogs</a>
         </div>
         
-        <div class="credit">Created By <span>Pritam Sarbajna</span>  | <i class="far fa-copyright"></i> 2022 All rights reserved.</div>
+        <div class="credit">Created By <span>Joy Panakal</span>  | <i class="far fa-copyright"></i> 2022 All rights reserved.</div>
     </section>
     <!--footer-->
 
