--- a/coffee-shop-website-main/index.html
+++ b/coffee-shop-website-main/index.html
@@ -366,9 +366,9 @@
     <section class="footer">
 
         <div class="share">
-            <a href="https://pritam-sarbajna.netlify.app/" class="fa-solid fa-earth-asia"></a>
-            <a href="https://github.com/PritamSarbajna" class="fa-brands fa-github"></a>
-            <a href="https://www.linkedin.com/in/pritam-sarbajna-74945821b/" class="fa-brands fa-linkedin"></a>
+            <a href="#" class="fa-solid fa-earth-asia"></a>
+            <a href="#" class="fa-brands fa-github"></a>
+            <a href="#" class="fa-brands fa-linkedin"></a>
         </div>
 
         <div class="links">
